--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@react-three/drei": "^9.66.1",
+    "@react-three/fiber": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.151.0",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0",
+    "styled-components": "^5.3.11",
+    "TagCloud": "^2.3.2",
+    "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
